# rustodo

./: .env  Cargo.toml  LICENSE  README.md
migrations/2023-04-28-163810_users/: up.sql
migrations/2023-04-28-173703_todos/: up.sql
src/: args.rs  main.rs  models.rs  schema.rs
src/ops/: todo_ops.rs  user_ops.rs
tests/: my_test.rs
