[package]
name = "rustodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"]}
dotenv = { version = "0.15.0" }
chrono = { version = "^0" }